inoa-test/src/test/k3s/test/infrastructure/keycloak/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
spec:
  serviceName: keycloak-headless
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: http
        prometheus.io/path: /realms/master/metrics
    spec:
      initContainers:
        - name: keycloak-server-postgres
          image: postgres:14.4-bullseye
          imagePullPolicy: Never
          command: [sh, -c, until psql ; do sleep 2 ; done ; sleep 10]
          env:
            - name: PGCONNECT_TIMEOUT
              value: "1"
            - name: PGHOST
              valueFrom:
                secretKeyRef:
                  name: keycloak-database
                  key: KC_DB_URL_HOST
            - name: PGDATABASE
              valueFrom:
                secretKeyRef:
                  name: keycloak-database
                  key: KC_DB_DATABASE
            - name: PGUSER
              valueFrom:
                secretKeyRef:
                  name: keycloak-database
                  key: KC_DB_USERNAME
            - name: PGPASSWORD
              valueFrom:
                secretKeyRef:
                  name: keycloak-database
                  key: KC_DB_PASSWORD
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
        - name: realms
          image: kokuwaio/keycloak:21.1.1-import
          imagePullPolicy: IfNotPresent
          envFrom:
            - secretRef:
                name: keycloak-database
            - secretRef:
                name: keycloak-admin
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: realms
              mountPath: /realms
              readOnly: true
      containers:
        - name: keycloak-server
          image: kokuwaio/keycloak:21.1.1
          imagePullPolicy: IfNotPresent
          envFrom:
            - configMapRef:
                name: keycloak-config
            - secretRef:
                name: keycloak-database
            - secretRef:
                name: keycloak-admin
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 1
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 60
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 10
      volumes:
        - name: tmp
          emptyDir: {}
        - name: realms
          configMap:
            name: keycloak-realms
